// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getUsage Creates a usage string for a branch 1`] = `
"Usage: cli <subcommand> ...

Subcommands:

   echo"
`;

exports[`getUsage Creates a usage string for a leaf 1`] = `
"Usage: cli echo [<options>]

Options:

   [--message <str>] : A message"
`;

exports[`getUsage Creates a usage string for a leaf without a parent branch 1`] = `
"Usage: echo [<options>]

Options:

   [--message <str>] : A message"
`;
